<resources>
    <string-array name="yesno">
        <item>Sì</item>
        <item>No</item>
    </string-array>

    <string-array name="days_week">
        <item>SUN</item>
        <item>MON</item>
        <item>TUE</item>
        <item>WED</item>
        <item>THU</item>
        <item>FRI</item>
        <item>SAT</item>
    </string-array>

    <string-array name="measures">
        <item>KM</item>
        <item>Miles</item>
    </string-array>

    <string-array name="speedmeasures">
        <item>km/h</item>
        <item>mph</item>
    </string-array>

    <string-array name="travdistmeasures">
        <item>km/dd</item>
        <item>m/dd</item>
    </string-array>

    <string name="u_measure">Unit of measure</string>
    <string name="top_sheet_behavior" translatable="false">com.github.techisfun.android.topsheet.TopSheetBehavior</string>
    <string name="example" translatable="false">Example</string>

    <string name="app_name">DIB Car Launcher</string>
    <string name="home">Go to home</string>
    <string name="ms2">m/s2</string>
    <string name="caricamento">Loading…</string>
    <string name="request_permissions">This app needs your GPS location in order to work properly.</string>
    <string name="google_maps">MAPS</string>
    <string name="volume_up">Volume+</string>
    <string name="volume_down">Volume-</string>
    <string name="app_not_installed">App not installed.</string>
    <string name="gps_not_enabled">This feature requires GPS.</string>
    <string name="errore_sconosciuto">Unknown error.</string>
    <string name="menu_spotify">Spotify</string>
    <string name="menu_phone">Connect phone</string>
    <string name="music_no_data">Not available. Why?</string>
    <string name="menu_voice">Vocal assistant</string>
    <string name="settings">Settings</string>
    <string name="credits">Developed by Simone Di Berardino</string>
    <string name="login_error">Error while logging in.</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="login">Login</string>
    <string name="register">Register your car</string>
    <string name="proceed_no_internet">Proceed without internet</string>
    <string name="connecting">Connecting…</string>
    <string name="password_errata">Wrong password.</string>
    <string name="menu_musica">Spotify</string>
    <string name="menu_youtube">YouTube</string>
    <string name="menu_navigatore">3D Maps</string>
    <string name="menu_settings">Settings</string>
    <string name="tts_n_sentence">Phrase {numero}</string>
    <string name="tts_sen_title">Welcome messages</string>
    <string name="inserisci">Insert</string>
    <string name="speak">Speak</string>
    <string name="tts_add_sentence">Add message</string>
    <string name="conferma">Confirm</string>
    <string name="personalizza">Customize</string>
    <string name="confirm_title">Do you want to continue?</string>
    <string name="confirm_desc">The action is not reversible.</string>
    <string name="welcome_msg_confirm">Welcome message set successfully.</string>
    <string  name="qr_code_dialog_title">Scan the QR Code and connect your smartphone now!</string>
    <string name="inquadra_qrcode">Download DIB Car Launcher Companion on your Android smartphone and scan the QR Code.</string>
    <string name="client_connesso">Client connected successfully!</string>
    <string name="notifica_da">Notification by {appname}</string>
    <string name="notifiche">Show notifications</string>
    <string name="new_notification">New notification</string>
    <string name="you_msg">You: {message}</string>
    <string name="connect_internet">No internet connection available</string>
    <string name="message_sent">Message sent</string>
    <string name="listening">Listening…</string>
    <string name="targa">User name</string>
    <string name="errore_input">Details not valid</string>
    <string name="consumi">Consuption (l/100km)</string>
    <string name="start_spotify_on_boot">Run Spotify on boot</string>
    <string name="settings_default_wp">Use DIB Car launcher wallpaper</string>
    <string name="config">Configuration</string>
    <string name="now">Now</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="stats_title">Car stats</string>
    <string name="avg_speed">Average speed</string>
    <string name="max_speed">Max speed</string>
    <string name="dist_trav">Distance travelled</string>
    <string name="total_speed">Overall: {tot} {um}</string>
    <string name="total_dist">Overall: {tot} {um}</string>
    <string name="chart_bottom">Stats about your car</string>
    <string name="not_registered_yet_question">Not registered yet?</string>
    <string name="already_registered_question">Already registered?</string>
    <string name="error_password_short">Password needs to be atleast 4 characters long.</string>
    <string name="error_plate_short">User name needs to be atleast 6 characters long.</string>
    <string name="error_car_registered">This car is already registered.</string>
    <string name="error_password_dont_match">Password do not match.</string>
    <string name="error_invalid_details">Invalid details, please retry.</string>
    <string name="error_no_internet">Internet connection unavailable, retry.</string>
    <string name="no_ads_available">No ads available.</string>
    <string name="upgrade_to_premium">Upgrade to premium!</string>
    <string name="premium_confirm">Upgrade to premium now</string>
    <string name="premium_desc_1">Upgrade to premium now, for just 2€/month!</string>
    <string name="premium_success">You successfully unlocked all the premium features for {n_months} month(s)!</string>
    <string name="premium_error">Error while processing.</string>
    <string name="payment_not_ready">Payment instance not ready yet, retry in a couple of seconds.</string>
    <string name="already_premium">You are already premium!</string>
    <string name="premium_desc_2"> <b>What you will receive:</b>\n• Ads removed\n• Access to your smartphone\'s notifications\n• Access to the real-time location of your car on the companion app\n• Access to real-time stats of your car\n• Access to 3D maps\n• And much more in the future!</string>
    <string name="premium_dib">DIB Premium</string>
    <string name="applying_data">Applying settings…</string>
    <string name="remove_ads_premium">Did you know? Upgrade to premium to remove ads!</string>
    <string name="premium_no_ads">As a premium user, you won\'t see any ads.</string>
    <string name="premium_expired">Your premium account has expired, renew it now if you don\'t want to lose the premium features!</string>
    <string name="music_no_data_why">If you\'re listening to Spotify, make sure \'Device Broadcast Status\' is enabled in your Spotify app!</string>
    <string name="edit_plate_num">Edit user name</string>
    <string name="edit_password">Change password</string>
    <string name="edit_car_info">Edit profile</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="success">Operation completed successfully!</string>
    <string name="select_plan">Choose your plan</string>
    <string name="n_months">{n} months</string>
    <string name="trip">Trip</string>
    <string name="quick_reply_1">OK.</string>
    <string name="quick_reply_2">I\'m coming.</string>
    <string name="quick_reply_3">I\'m here.</string>
    <string name="quick_reply_4">See you later.</string>
    <string name="default_audio">System audio</string>
    <string name="profile">My profile</string>
    <string name="disconnect">Disconnect</string>
    <string name="disconnected">Disconnected!</string>
    <string name="logged">Logged in successfully!</string>
    <string name="registered">Registered successfully!</string>
    <string name="data_safety_policy"><u>DIB Car Launcher data safety policy</u></string>
    <string name="setting_noti_toggle">Smartphone notifications</string>
    <string name="disconnected_pw_changed">Disconnected from your account: Wrong credentials.</string>
    <string name="settings_wallpaper">Wallpaper</string>
    <string name="settings_car_logo">Car brand logo</string>
    <string name="download_comp_app">Download the app: play.google.com/store/apps/details?id=com.simonediberardino.infotainmentcompanion</string>
</resources>
