<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/square_transparent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|left"
            android:layout_marginLeft="64px"
            android:layout_marginTop="64px"
            android:fontFamily="sans-serif-black"
            android:text="@string/config"
            android:textColor="@color/purple"
            android:textSize="@dimen/h1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="32px"
            android:background="@drawable/square_solid"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button2"
                android:layout_width="120px"
                android:layout_height="70px"
                android:layout_marginRight="8dp"
                android:background="@drawable/square_solid"
                android:text="@string/day"
                android:textColor="@color/purple"
                android:textSize="@dimen/h6" />

            <Button
                android:id="@+id/button3"
                android:layout_width="120px"
                android:layout_height="70px"
                android:layout_marginRight="8dp"
                android:background="@drawable/square_solid"
                android:text="@string/week"
                android:textColor="@color/purple"
                android:textSize="@dimen/h6" />

            <Button
                android:id="@+id/button4"
                android:layout_width="120px"
                android:layout_height="70px"
                android:layout_weight="1"
                android:background="@drawable/square_solid"
                android:text="@string/month"
                android:textColor="@color/purple"
                android:textSize="@dimen/h6" />
        </LinearLayout>
        <com.anychart.anychart.AnyChartView
            android:id="@+id/any_chart_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </LinearLayout>
</LinearLayout>