<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@+id/scrollView2"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/home_3_title"
        android:layout_width="600px"
        android:layout_height="wrap_content"
        android:layout_marginStart="32px"
        android:layout_marginEnd="32px"
        android:layout_marginBottom="32px"
        android:gravity="center"
        android:shadowColor="@color/darkblue"
        android:shadowDx="0.0"
        android:shadowDy="0.0"
        android:shadowRadius="8"
        android:text="@string/inquadra_qrcode"
        android:textColor="@color/white"
        android:textSize="@dimen/h6"
        app:layout_constraintBottom_toTopOf="@+id/home_3_qrcode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/home_3_desc"
        android:layout_width="600px"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:shadowColor="@color/darkblue"
        android:shadowDx="0.0"
        android:shadowDy="0.0"
        android:shadowRadius="8"
        android:text="@string/download_comp_app"
        android:textColor="@color/white"
        android:textSize="@dimen/h7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_3_qrcode" />

    <ImageView
        android:id="@+id/home_3_qrcode"
        android:layout_width="280px"
        android:layout_height="280px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.472" />

    <CheckBox
        android:id="@+id/home_3_notifiche_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12px"
        android:text="@string/notifiche"
        android:textColor="@color/white"
        android:textSize="@dimen/h8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_3_desc" />
</androidx.constraintlayout.widget.ConstraintLayout>